<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DesignMain"
    android:background="@color/black0B0B0B">


    <TextView
        android:id="@+id/textView86"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/design_1"
        android:textColor="@color/white"
        android:textSize="20dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="380dp"
                android:layout_height="500dp"
                android:layout_gravity="center"
                android:background="@color/purple_1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="300dp"
                        android:layout_height="380dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginVertical="20dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/imageView87"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:srcCompat="@drawable/material" />

                            <TextView
                                android:id="@+id/textView88"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:layout_marginBottom="30dp"
                                android:fontFamily="@font/roboto"
                                android:gravity="center"
                                android:text="@string/design_2"
                                android:textColor="@color/white"
                                android:textSize="20dp" />

                            <ImageView
                                android:id="@+id/imageView89"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:srcCompat="@drawable/picture" />

                            <TextView
                                android:id="@+id/textView90"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:layout_marginBottom="30dp"
                                android:fontFamily="@font/roboto"
                                android:gravity="center"
                                android:text="@string/design_3"
                                android:textColor="@color/white"
                                android:textSize="20dp" />

                            <ImageView
                                android:id="@+id/imageView91"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:srcCompat="@drawable/letter" />

                            <TextView
                                android:id="@+id/textView92"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:layout_marginBottom="30dp"
                                android:fontFamily="@font/roboto"
                                android:gravity="center"
                                android:text="@string/design_4"
                                android:textColor="@color/white"
                                android:textSize="20dp" />

                        </LinearLayout>

                    </FrameLayout>

                    <Button
                        android:id="@+id/button93"
                        android:layout_width="250dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/black"
                        android:fontFamily="@font/roboto"
                        android:text="Сделать свой дизайн"
                        android:clickable="true"
                        android:textColor="@color/white"
                        android:textSize="20dp"/>
                </LinearLayout>
            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="ИЛИ"
                android:textColor="@color/white"
                android:textSize="25dp"></TextView>
            <FrameLayout
                android:layout_width="380dp"
                android:layout_height="400dp"
                android:layout_gravity="center"
                android:background="@color/purple_1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="360dp"
                        android:layout_height="250dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="40dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">


                            <ImageView
                                android:id="@+id/imageView94"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:src="@drawable/vector"/>

                            <TextView
                                android:id="@+id/textView95"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:fontFamily="@font/roboto"
                                android:gravity="center"
                                android:text="@string/design_5"
                                android:textColor="@color/white"
                                android:textSize="20dp"></TextView>
                        </LinearLayout>
                    </FrameLayout>
                    <Button
                        android:id="@+id/button96"
                        android:layout_width="250dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="30dp"
                        android:text="Оставить заявку"
                        android:clickable="true"
                        android:textColor="@color/white"
                        android:background="@color/black"
                        android:layout_gravity="center_horizontal"
                        android:textSize="20dp"/>
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>